--- a/Diplom_Aeroport/mainwindow.ui
+++ b/Diplom_Aeroport/mainwindow.ui
@@ -184,7 +184,7 @@
    </property>
    <widget class="QMenu" name="menuTools">
     <property name="title">
-     <string>Tools</string>
+     <string>Инструменты</string>
     </property>
     <addaction name="actionStatistica"/>
     <addaction name="actionAbout"/>
@@ -198,7 +198,7 @@
   </action>
   <action name="actionAbout">
    <property name="text">
-    <string>About</string>
+    <string>О программе</string>
    </property>
   </action>
  </widget>
